# spharray

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: PROGRESS_DASHBOARD.md  README.md  getting_started.md  release_checklist.md
examples/: README.md
examples/core/: basic_usage.py  beamforming.py  doa_estimation.py  sh_transforms.py
examples/notebooks/: README.md  getting_started.ipynb
examples/rafaely/ch1/: fig_example_function.py  fig_pn.py  fig_pnm.py  fig_rotation.py  fig_sh_balloon.py  fig_sinc_and_cap.py  fig_spherical_grid.py  fig_truncated_cap.py  fig_xyz_coordinates.py
examples/rafaely/ch2/: fig_planewave_freefield_sphere.py  fig_planewave_freefield_xy.py  fig_planewave_rigid_sphere.py  fig_planewave_rigid_xy.py  fig_radial_functions_1.py  fig_radial_functions_2.py
examples/rafaely/ch3/: fig_aliasing_example.py  fig_aliasing_matrix.py  fig_platonic_solids.py  fig_sampling_schemes.py  gaussian.py
examples/rafaely/ch4/: fig_array_condition_numbers.py  fig_array_design_examples.py  fig_array_radial_functions.py  fig_cardioid_directivity.py
examples/rafaely/ch5/: fig_beamforming_example.py  fig_omni_and_directional.py  fig_wng_example.py
examples/rafaely/ch6/: fig_chebyshev_polynomial.py  fig_dolphchebyshev_beampattern.py  fig_hypercardioid_beampattern.py  fig_mixed_objectives_designs.py  fig_multiple_objective_beampatterns.py  fig_wng_and_di_example.py  (+2 more)
examples/tutorials/: 01_sht_and_beamforming.py  02_simulated_doa_pipeline.py  03_modal_equalization_pipeline.py
scripts/: README.md
scripts/experimental/: eval_foa_stereo_dl.py  train_foa_stereo_dl.py
spharray/: __init__.py  types.py
spharray/acoustics/: __init__.py  radial.py
spharray/array/: __init__.py  sampling.py  simulation.py
spharray/beamforming/: __init__.py  fixed.py  steer.py
spharray/coherence/: __init__.py
spharray/diffuseness/: __init__.py  estimators.py
spharray/doa/: __init__.py  covariance.py  spectra.py
spharray/plotting/: __init__.py  spatial_helpers.py  style.py
spharray/regression/: __init__.py  image_compare.py  matlab.py  status.py
spharray/sh/: __init__.py  basis.py  transforms.py
spharray/toolkit/: __init__.py  _resource_paths.py
spherical_array_processing/: __init__.py  coords.py  types.py
spherical_array_processing/acoustics/: __init__.py  radial.py
spherical_array_processing/array/: __init__.py  sampling.py  simulation.py
spherical_array_processing/beamforming/: __init__.py  adaptive.py  fixed.py  steer.py
spherical_array_processing/coherence/: __init__.py  diffuse.py
spherical_array_processing/diffuseness/: __init__.py  estimators.py
spherical_array_processing/doa/: __init__.py  covariance.py  spectra.py
spherical_array_processing/experimental/: __init__.py  foa_from_stereo.py  foa_from_stereo_dl.py
spherical_array_processing/plotting/: __init__.py  spatial_helpers.py  style.py
spherical_array_processing/references/: __init__.py
spherical_array_processing/regression/: __init__.py  image_compare.py  matlab.py  status.py
spherical_array_processing/repro/: __init__.py  _reference_paths.py
spherical_array_processing/resources/: __init__.py
spherical_array_processing/sh/: __init__.py  basis.py  transforms.py
spherical_array_processing/toolkit/: _resource_paths.py
tests/: README.md  test_acoustics.py  test_basic_usage_example_smoke.py  test_beamforming.py  test_beamforming_doa.py  test_coherence.py  test_coords.py  test_diffuseness.py  test_doa.py  test_integration.py  test_new_features.py  test_rafaely_plot_wrappers.py  test_sampling.py  test_sh.py  test_sh_basis_scipy_compat.py
tests/core/: test_beamforming_doa.py  test_coords.py  test_radial.py  test_sh.py
tests/experimental/: test_foa_experimental.py  test_foa_experimental_dl.py
tests/integration/: test_integrated_interfaces.py  test_spatial_harmonics_layers.py
tests/plotting/: test_plotting_helpers.py
tests/repro/: test_repro_dependency_packages.py
(+32 files in other folders)
