[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spherical-array-processing"
version = "0.2.0"
description = "Self-contained Python toolkit for spherical array processing"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "konoyo + Codex" }
]
dependencies = [
  "numpy>=1.26",
  "scipy>=1.11",
  "matplotlib>=3.8",
]

[project.optional-dependencies]
audio = [
  "soundfile>=0.12",
]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "build>=1.2",
]
image = [
  "scikit-image>=0.22",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["spherical_array_processing*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
