[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spharray"
version = "0.3.0"
description = "Self-contained Python toolkit for spherical array processing"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "konoyo + Codex" }
]
keywords = [
  "spherical harmonics",
  "microphone array",
  "beamforming",
  "direction of arrival",
  "ambisonics",
  "spatial audio",
  "acoustics",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Physics",
  "Topic :: Multimedia :: Sound/Audio :: Analysis",
  "Typing :: Typed",
]
dependencies = [
  "numpy>=1.26",
  "scipy>=1.11",
  "matplotlib>=3.8",
]

[project.urls]
"Source" = "https://github.com/Konoyo-014/spharray"
"Bug Tracker" = "https://github.com/Konoyo-014/spharray/issues"
"Changelog" = "https://github.com/Konoyo-014/spharray/blob/main/CHANGELOG.md"

[project.optional-dependencies]
audio = [
  "soundfile>=0.12",
]
dev = [
  "build>=1.2",
  "pytest>=8.0",
]
image = [
  "scikit-image>=0.22",
]
notebook = [
  "ipykernel>=6",
  "jupyterlab>=4",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["spharray*"]

[tool.setuptools.package-data]
spharray = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
